Closed
Bug 1182487
Opened 10 years ago
Closed 10 years ago
INHIBIT_CACHING causing assertion
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
| Tracking | Status | |
|---|---|---|
| firefox42 | --- | fixed |
People
(Reporter: valentin, Assigned: mayhemer)
References
Details
Attachments
(2 files, 1 obsolete file)
|
882 bytes,
patch
|
michal
:
review+
|
Details | Diff | Splinter Review |
|
4.34 KB,
patch
|
michal
:
review+
|
Details | Diff | Splinter Review |
When opening a channel with the nsIRequest.INHIBIT_CACHING flag set, an assertion occurs at:
"Assertion failure: mCacheEntryIsWriteOnly || mCachedContentIsPartial, at /home/icecold/mozilla-central/netwerk/protocol/http/nsHttpChannel.cpp:4233"
"#01: mozilla::net::nsHttpChannel::InstallCacheListener(long) (/home/icecold/mozilla-central/netwerk/protocol/http/nsHttpChannel.cpp:4233 (discriminator 7)
| Reporter | ||
Comment 1•10 years ago
|
||
| Reporter | ||
Updated•10 years ago
|
Assignee: nobody → valentin.gosu
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•10 years ago
|
||
Not sure if I'm doing something wrong, or it just regressed at some point.
Assignee: valentin.gosu → nobody
Status: ASSIGNED → NEW
| Reporter | ||
Comment 3•10 years ago
|
||
Honza, this assertion was added by you in rev 148125 (bug 913807)
Does it still make sense, or did our assumptions change over time?
Everything seems to work just fine if I remove it.
Flags: needinfo?(honzab.moz)
| Assignee | ||
Comment 4•10 years ago
|
||
So, the assertion seems correct. InstallCacheListener is preparing write to the cache entry. Hence one of this MUST be true.
Which part is failing? mCacheEntryIsWriteOnly or mCachedContentIsPartial?
I'll try the test but I don't follow your comment 2 (where you disassign yourself from this bug)
Flags: needinfo?(honzab.moz) → needinfo?(valentin.gosu)
| Reporter | ||
Comment 5•10 years ago
|
||
(In reply to Honza Bambas (:mayhemer) from comment #4)
> So, the assertion seems correct. InstallCacheListener is preparing write to
> the cache entry. Hence one of this MUST be true.
Shouldn't we skip writing to the cache entry if INHIBIT_CACHING is present?
>
> Which part is failing? mCacheEntryIsWriteOnly or mCachedContentIsPartial?
>
> I'll try the test but I don't follow your comment 2 (where you disassign
> yourself from this bug)
I was just confused that what seems as a basic use case triggers the assert :)
Flags: needinfo?(valentin.gosu)
| Assignee | ||
Comment 6•10 years ago
|
||
This is there since ever. The condition to call InstallCacheListener is simply wrong!
Valentin, don't try to remove assertions you don't see behind!
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
| Assignee | ||
Comment 7•10 years ago
|
||
mLoadedFromApplicationCache == mCacheEntryIsReadOnly at this place, all the time, so it's mostly a no-change for that case. Basic xpcshell test run for network passes.
Valentin: the test case should be incorporated, just needs some cleanup of what is commented out and not according standards.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=82cc31e492c2
Attachment #8634344 -
Flags: review?(michal.novotny)
| Reporter | ||
Comment 8•10 years ago
|
||
Attachment #8634616 -
Flags: review?(michal.novotny)
| Reporter | ||
Updated•10 years ago
|
Attachment #8632108 -
Attachment is obsolete: true
| Reporter | ||
Updated•10 years ago
|
Assignee: honzab.moz → valentin.gosu
| Reporter | ||
Comment 9•10 years ago
|
||
bzexport changed the asignee again :)
Assignee: valentin.gosu → honzab.moz
Updated•10 years ago
|
Attachment #8634616 -
Flags: review?(michal.novotny) → review+
Updated•10 years ago
|
Attachment #8634344 -
Flags: review?(michal.novotny) → review+
| Assignee | ||
Comment 10•10 years ago
|
||
Keywords: checkin-needed
Comment 11•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/b2ca921b8827
https://hg.mozilla.org/integration/mozilla-inbound/rev/54e51956cd9f
Keywords: checkin-needed
Comment 12•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/b2ca921b8827
https://hg.mozilla.org/mozilla-central/rev/54e51956cd9f
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox42:
--- → fixed
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in
before you can comment on or make changes to this bug.
Description
•